--- a/Application.Service/appsettings.json
+++ b/Application.Service/appsettings.json
@@ -9,7 +9,9 @@
   "AllowedHosts": "*",
   "RedisCache": {
     "ConnectionString": "redis-18804.c16.us-east-1-2.ec2.cloud.redislabs.com:18804, password=wbtAOg0nVECplDowQaYZ7Bjhbv27ZfrN,ssl=false,abortConnect=False",
-
+    "CacheKey": "_Roulette",
+    "CacheIdRouletteKey": "IdRoulette",
+    "CacheIdBetKey": "IdBet",
     "CacheExpiration": 45
   }
 }
